# longfeedback

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  LongFeedback.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
configs/data/: heartsteps.yaml  kuairand.yaml  kuairand_sessions.yaml  lmsys.yaml  wildchat.yaml
configs/experiments/: e0.yaml  e1.yaml  e10_hs_day.yaml  e10_hs_day_phase2.yaml  e11_alfworld_credit.yaml  e11_alfworld_credit_smoke.yaml  e12_alfworld_online.yaml  e12_alfworld_online_smoke.yaml  e1_wildchat.yaml  e5.yaml  e6.yaml  e8.yaml  e9.yaml  gate_a.yaml  gate_a_smoke.yaml  gate_b.yaml  multiseed.yaml
docs/: architecture_decisions.md  causal_assumptions.md  data_governance.md  e10_hs_day_results.md  e11_e12_alfworld_design.md  linkedin_onboarding_log_audit_design.md  real_credit_protocol.md  roadmap.md  scientific_contract.md
reports/: v0_2_report.md
scripts/alfworld/: worker.py
src/longfeedback/: __init__.py  __main__.py  budget.py  cli.py  config.py
tests/integration/: test_cli.py  test_e0_pipeline.py  test_e10_hs_day_phase2_pipeline.py  test_e10_hs_day_pipeline.py  test_e11_pipeline.py  test_e12_pipeline.py  test_e5_pipeline.py  test_e6_pipeline.py  test_e8_pipeline.py  test_e9_pipeline.py  test_gate_a_pipeline.py  test_gate_b_pipeline.py  test_kuairand_local.py  test_kuairand_sessions_local.py  test_lmsys_local.py  test_multiseed_pipeline.py  test_wildchat_local.py
tests/property/: test_prefix_leakage.py  test_worlds_invariants.py
tests/reproducibility/: test_e0_reproducibility.py  test_e5_reproducibility.py  test_gate_a_reproducibility.py
tests/unit/: test_baselines.py  test_branching_targets.py  test_c3_gigpo.py  test_candidate_actor.py  test_candidate_docm.py  test_config.py  test_conversation_adapter.py  test_credit_metrics.py  test_e10_hs_day_stats.py  test_e1_examples.py  test_e6_bridge.py  test_e8_stats.py  test_e9_stats.py  test_ensemble.py  test_environments_e11.py  test_evaluation.py  test_experiment_features.py  test_gate_b_transfer.py  test_group_policy_e12.py  test_hidden_intent.py  test_kuairand_adapter.py  test_lmsys_adapter.py  test_manifest.py  test_models.py  test_multiseed_stats.py  test_observability.py  test_outcome_rules.py  test_reinforce.py  test_schema.py  (+4 more)
(+78 files in other folders)
