[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "longfeedback"
version = "0.3.0"
description = "Research tools for learning from delayed, implicit behavioral outcomes."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "LongFeedback Contributors" }]
keywords = ["reinforcement-learning", "reward-modeling", "credit-assignment"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "matplotlib>=3.8,<4",
  "numpy>=1.26,<3",
  "pydantic>=2.7,<3",
  "PyYAML>=6.0.1,<7",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
research = [
  "duckdb>=1,<2",
  "pyarrow>=16,<22",
  "torch>=2.3,<3",
]

[dependency-groups]
dev = [
  "hypothesis>=6.100,<7",
  "mypy>=1.10,<2",
  "pre-commit>=3.7,<5",
  "pytest>=8.2,<9",
  "pytest-cov>=5,<8",
  "ruff>=0.5,<1",
  "types-PyYAML>=6.0.12,<7",
]

[project.scripts]
longfeedback = "longfeedback.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/longfeedback"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["longfeedback"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
# The report generator embeds markdown tables (long lines) and scientific
# notation (Greek rho, minus sign) on purpose.
"src/longfeedback/experiments/report.py" = ["E501", "RUF001"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["longfeedback"]
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
  "matplotlib.*",
  "pyarrow.*",
  "textworld.*",
  "alfworld.*",
  "transformers.*",
  "peft.*",
]
ignore_missing_imports = true
